--- a/cities.html
+++ b/cities.html
@@ -16,5 +16,34 @@
 <h1>Visit Cities with Vinay JYothi</h1>
 
 
+
+<div class="flex-container  ">
+  
+
+    <div class="row">
+        <div class="col-sm-2">G</div>
+        <div class="col-sm-2">O</div>
+        <div class="col-sm-2">L</div>
+        <div class="col-sm-2">P</div>
+        <div class="col-sm-2">A</div>
+        <div class="col-sm-2">I</div>
+    </div>
+    <div class="row">
+        <div class="col-md">Goa</div>
+        <div class="col-md">Ooty</div>
+        <div class="col-md">Lucknow</div>
+        <div class="col-md">Pune</div>
+        <div class="col-md">Ahmedabad</div>
+        <div class="col-md">Indore</div>
+
+    </div>
+
+
+</div>
+
+<p>When we compress the screen size the cities name row breaks first because for the cities name row we have taken the column size as medium. And the screen size reaches 768px, and it got reached and compressed the screen size. so it got breaked first.</p>
+
+
+
 </body>
 </html>
