--- a/cities.html
+++ b/cities.html
@@ -43,6 +43,19 @@
 
 <p>When we compress the screen size the cities name row breaks first because for the cities name row we have taken the column size as medium. And the screen size reaches 768px, and it got reached and compressed the screen size. so it got breaked first.</p>
 
+<div class="flex-container">
+  <img src="Goa.jpg" class="img-fluid" alt="Goa" >
+  <img src="Ooty.jpg" class="img-fluid" alt="Ooty" >
+  <img src="Pune.jpg" class="img-fluid" alt="Pune">
+  
+  <div class="Second container">
+   <h3>Thumbnails</h3>
+    <img src="Goa.jpg" class="img-thumbnail img-fluid" alt="Goa">
+    <img src="Ooty.jpg" class="img-thumbnail img-fluid" alt="Ooty">
+    <img src="Pune.jpg" class="img-thumbnail img-fluid" alt="Pune">
+
+  </div>
+</div>
 
 
 </body>
