--- a/cities.html
+++ b/cities.html
@@ -57,6 +57,62 @@
   </div>
 </div>
 
+<h3>Table</h3>
+<table class="table table-hover table-bordered table-dark  table-striped-columns">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col"><b>Letter</b></th>
+      <th scope="col"> <b>City</b></th>
+      <th scope="col"><b>River</b></th>
+      <th scope="col"><b>Tree</b></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>G</td>
+      <td>Goa</td>
+      <td>Godavari</td>
+      <td>Guava Tree</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>O</td>
+      <td>Ooty</td>
+      <td>Ottawa</td>
+      <td>Olive Tree</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td >L</td>
+      <td>Lucknow</td>
+      <td>La Crosse River</td>
+      <td>Loquat Tree</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td >P</td>
+      <td>Pune</td>
+      <td>Pea River</td>
+      <td>Pepino</td>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>A</td>
+      <td>Ahmedabad</td>
+      <td>Alcovy River</td>
+      <td>Apple Tree</td>
+    </tr>
+    <tr>
+      <th scope="row">6</th>
+      <td >I</td>
+      <td>Indore</td>
+      <td>Illinois River</td>
+      <td>Irish Tree</td>
+    </tr>
+  </tbody>
+</table>
 
 </body>
 </html>
