--- a/cities.html
+++ b/cities.html
@@ -59,6 +59,7 @@
 
 <h3>Table</h3>
 <table class="table table-hover table-bordered table-dark  table-striped-columns">
+  <caption>Table designed as per my wish</caption>
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -113,6 +114,19 @@
     </tr>
   </tbody>
 </table>
-
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups"></div>
+<div class="btn-group" role="group" aria-label="Letters">
+  <button type="button" class="btn btn-success">G</button>
+  <button type="button" class="btn btn-success">O</button>
+  <button type="button" class="btn btn-success">L</button>
+</div>
+<div class="btn-group" role="group" aria-label="Basic mixed styles example">
+  <button type="button" class="btn btn-primary">P</button>
+  <button type="button" class="btn btn-warning">A</button>
+</div>
+<div class="btn-group" role="group" aria-label="Basic mixed styles example">
+  <button type="button" class="btn btn-danger">A</button>
+</div>
+</div>
 </body>
 </html>
