--- a/cities.html
+++ b/cities.html
@@ -128,5 +128,16 @@
   <button type="button" class="btn btn-danger">A</button>
 </div>
 </div>
+<hr>
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="basic.html">Basic Page</a></li>
+    <li><a class="dropdown-item" href="advance.html">Advance Page</a></li>
+   
+  </ul>
+</div>
 </body>
 </html>
