--- a/cities.html
+++ b/cities.html
@@ -13,6 +13,22 @@
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
 <body>
+  <nav class="navbar navbar-expand-md navbar-light and bg-ligh bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="cities.html">A Few Cities</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav mr-auto">
+          <ul>
+          <a class="nav-link active" aria-current="page" href="basic.html">Basic </a>
+          <a class="nav-link" href="advance.html">Advance</a>
+        </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
 <h1>Visit Cities with Vinay JYothi</h1>
 
 
@@ -129,6 +145,7 @@
 </div>
 </div>
 <hr>
+
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Dropdown button
