--- a/cities.html
+++ b/cities.html
@@ -130,7 +130,14 @@
     </tr>
   </tbody>
 </table>
-<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups"></div>
+<div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <button>G</button>
+  <button>O</button>
+  <button>L</button>
+  <button>P</button>
+  <button>A</button>
+  <button>I</button>
+</div>
 <div class="btn-group" role="group" aria-label="Letters">
   <button type="button" class="btn btn-success">G</button>
   <button type="button" class="btn btn-success">O</button>
@@ -141,7 +148,7 @@
   <button type="button" class="btn btn-warning">A</button>
 </div>
 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-  <button type="button" class="btn btn-danger">A</button>
+  <button type="button" class="btn btn-danger">I</button>
 </div>
 </div>
 <hr>
@@ -173,5 +180,31 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+<hr>
+
+<div class="card" style="width: 18rem;">
+  <img src="Goa.jpg" class="card-img-top" alt="Goa">
+  <div class="card-body">
+    <h5 class="card-title">Goa</h5>
+    <p class="card-text">Renowned for its beaches, Goa is visited by hundreds of thousands of international and domestic tourists each year.</p>
+    <a href="Goa.jpg" class="btn btn-primary">Go Goa</a>
+  </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="Ooty.jpg" class="card-img-top" alt="Ooty">
+  <div class="card-body">
+    <h5 class="card-title">Ooty</h5>
+    <p class="card-text">Ooty is a gorgeous hill station in Tamil Nadu, and is considered a haven for nature lovers from all the country. </p>
+    <a href="Ooty.jpg" class="btn btn-primary">Go Ooty</a>
+  </div>
+</div>
+<div class="card" style="width: 18rem;">
+  <img src="Pune.jpg" class="card-img-top" alt="Pune">
+  <div class="card-body">
+    <h5 class="card-title">Pune</h5>
+    <p class="card-text">Pune is the second-largest city in the state of Maharashtra after Mumbai, and is an important city in terms of its economic and industrial growth.</p>
+    <a href="Pune.jpg" class="btn btn-primary">Go Pune</a>
+  </div>
+</div>
 </body>
 </html>
