--- a/cities.html
+++ b/cities.html
@@ -144,7 +144,7 @@
   <button type="button" class="btn btn-success">L</button>
 </div>
 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-  <button type="button" class="btn btn-primary">P</button>
+  <button type="button" class="btn btn-warning">P</button>
   <button type="button" class="btn btn-warning">A</button>
 </div>
 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
